# chip8_rust

./: .gitignore  Cargo.toml
emulator/: Cargo.toml
emulator/examples/: default.rs  dummy.rs
emulator/src/: config.rs  cpu.rs  default_io.rs  errors.rs  fontset.rs  instruction.rs  interpreter.rs  io.rs  lib.rs  register.rs  utils.rs
emulator/src/tests/: mod.rs  utils.rs
src/: load.rs  main.rs  sound.rs
