[package]
authors = ["Owen Sanchez <pengowen816@gmail.com>"]
name = "chip8"
version = "0.1.0"

[dependencies]
log = "0.3"
error-chain = "0.8"
rand = "0.3"

[dependencies.piston_window]
version = "0.62"
optional = true

[dependencies.ears]
version = "0.4"
optional = true

[dependencies.clippy]
version = "*"
optional = true

[features]
default = []

default_io = ["piston_window", "ears"]
